--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Trigger deployment on push to the main branch
+  workflow_dispatch:  # This allows manual triggering
 
 jobs:
   deploy:
