--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <name>HTTP Function</name>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.release>21</maven.compiler.release>
     </properties>
 
@@ -25,7 +28,7 @@
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.8.1</version> <!-- Make sure to use a recent version of the plugin -->
+             <version>3.10.1</version> <!-- Make sure to use a recent version of the plugin -->
               <configuration>
                   <source>21</source> <!-- Use Java 21 as the source -->
                   <target>21</target> <!-- Use Java 21 as the target -->
