--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,21 @@ jobs:
         service_account_key: ${{ secrets.GCP_KEY }}
         export_default_credentials: true
 
+    - name: Set up Maven
+      run: |
+        sudo apt-get update
+        sudo apt-get install maven
+
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+
+    - name: Check Java version
+      run: java -version
+
     # Step 3: Build the project
     - name: Build with Maven
       run: mvn clean package
