--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,11 @@ jobs:
         service_account_key: ${{ secrets.GCP_KEY }}
         export_default_credentials: true
 
+    - name: Authenticate Google Cloud
+      run: |
+        echo "${{ secrets.GCP_KEY }}" > gcp-key.json
+        gcloud auth activate-service-account --key-file=gcp-key.json
+        
     - name: Set up Maven
       run: |
         sudo apt-get update
