--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,30 +10,29 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
     # Step 1: Checkout the code
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Step 2: Set up Google Cloud SDK
+    # Step 2: Authenticate using Workload Identity Federation
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+        service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+
+    # Step 3: Set up Google Cloud SDK
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_KEY }}
-        export_default_credentials: true
 
-    - name: Authenticate Google Cloud
-      run: |
-        echo "${{ secrets.GCP_KEY }}" > gcp-key.json
-        gcloud auth activate-service-account --key-file=gcp-key.json
-        
-    - name: Set up Maven
-      run: |
-        sudo apt-get update
-        sudo apt-get install maven
-
-
+    # Step 4: Set up Java JDK
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
@@ -43,11 +42,17 @@ jobs:
     - name: Check Java version
       run: java -version
 
-    # Step 3: Build the project
+    # Step 5: Set up Maven
+    - name: Set up Maven
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y maven
+
+    # Step 6: Build the project
     - name: Build with Maven
       run: mvn clean package
 
-    # Step 4: Deploy to Google Cloud Functions
+    # Step 7: Deploy to Google Cloud Functions
     - name: Deploy to Cloud Function
       run: |
         gcloud functions deploy getFromBunnyFunction \
